//
// Copyright (C) 2019-2020 Vdaas.org Vald team ( kpango, rinx, kmrmt )
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package vald;

option go_package = "github.com/vdaas/vald/apis/grpc/vald";
option java_multiple_files = true;
option java_package = "org.vdaas.vald";
option java_outer_classname = "ValdApi";

import "payload.proto";
import "google/api/annotations.proto";
import "pb/gql.proto";

service Object {
  option (gql.svc_type) = QUERY;
  rpc Exists(payload.Object.ID) returns (payload.Object.ID) {
    option (google.api.http).get = "/exists/{id}";
  }
  rpc GetObject(payload.Object.ID) returns (payload.Object.Vector) {
    option (google.api.http).get = "/object/{id}";
  }
  rpc StreamGetObject(stream payload.Object.ID)
      returns (stream payload.Object.Vector) {}
}
